# ros2_simple_arm

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  simple_arm.srdf  simple_arm_controllers.yaml
launch/: move_arm.launch.py  world.launch.py
src/: move_arm.cpp
urdf/: simple.xacro
